testdata/positive/logical_ops.rs
fn main() {
    let x = true;
    let y = false;
    let and_result = x && y;
    let or_result = x || y;
}

