testdata/negative/undefined_var.rs
fn main() {
    let x = undefined_variable;
}

